# auto-bot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ai_heal_watch.py  auto_bot.spec  build.bat  main.py  pyproject.toml  requirements.txt  test_ai_heal.py
.github/signpath/: autobot-exe.artifact-configuration.xml
.github/workflows/: ci.yml  release.yml
config/: bot_config.example.yaml
engine/: actions.py  ai_healer.py  data_source.py  file_writer.py  headless.py  image_matcher.py  interrupt_handler.py  logger.py  loop_package.py  loop_runner.py  ocr.py  pattern_observer.py  prefs.py  runtime.py  sap_actions.py  sap_capture.py  scheduler.py  screen_monitor.py  ui_element.py  version.py
gui/: capture_tool.py  error_dialog.py  gui_utils.py  keybind_utils.py  listbox_crud.py  log_panel.py  main_window.py  recorder.py  sap_compare_dialog.py  schedule_dialog.py  sequence_editor.py  tooltip.py  tooltip_texts.py
integrations/: sap_client.py  web_client.py
scripts/: make_icon.py  setup.ps1
tests/: conftest.py  test_actions.py  test_data_source.py  test_file_writer.py  test_image_matcher.py  test_listbox_crud.py  test_loop_package.py  test_loop_runner.py  test_ocr.py  test_pattern_observer.py  test_prefs.py  test_recorder.py  test_runtime.py  test_sap_actions.py  test_sap_capture.py  test_scheduler.py  test_screen_monitor.py  test_sequence_editor.py  test_tooltip.py  test_ui_element.py
