[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-bot"
version = "1.0.0"
description = "Visual automation bot สำหรับ SAP, web browser และ desktop app"
authors = [{ name = "kridsadaa" }]
requires-python = ">=3.12"
dependencies = [
    "pyautogui==0.9.54",
    "opencv-python==4.13.0.92",
    "Pillow==12.1.0",
    "pynput==1.8.2",
    "pyyaml==6.0.3",
    "pandas==2.2.3",
    "playwright==1.50.0",
    "pywinauto==0.6.9",
    "pywin32==308",
    "keyboard==0.13.5",
    "pyperclip==1.9.0",
    "pytesseract==0.3.10",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-mock>=3.15",
    "pyinstaller>=6.0",
]

[project.scripts]
auto-bot = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
